style.css
/* STEP ONE: set up custom properties */
:root {
    /*? Font style and weight styles */
    --ff-sans: 'Poppins', 'sans-serif';
    --fw-light: 200;
    --fw-normal: 400;
    --fw-bold: 600;
    /* ? Font-size styles */
    --fs-400: 0.9275rem;
    --fs-500: 1.25rem;
    --fs-600: 1.625rem;
    --fs-900: 2.5rem;
    /* ? color styles */
    /* Color text */
    --clr-neutral-900: hsl(234, 12%, 34%);
    --clr-neutral-400: hsl(229, 6%, 66%);
    --clr-neutral-100: hsl(0, 0%, 98%);


    /* Card banners */
    --clr-teal: hsl(180, 58%, 56%);
    --clr-red: hsl(0, 70%, 60%);
    --clr-blue: hsl(212, 75%, 62%);
    --clr-yellow: hsl(34, 89%, 65%);


    /* Box Sizing */
    *,
    *::before,
    *::after {
        box-sizing: border-box;
    }

    /* Font properties */
    html {
        /* font-family: var(--ff-sans); */
        /* font-family: 'Poppins', sans-serif; */

        /* font-weight: var(--fw-normal); */
        line-height: 1.7;
        color: var(--clr-neutral-400);
    }

    body {
        margin: 0;
        /* font-family: 'Poppins', sans-serif; */
        font-family: var(--ff-sans);
        font-weight: var(--fw-normal);
        /* line-height: 1.7; */
        color: var(--clr-neutral-400);
    }

    h1,
    h2,
    h3 {
        color: var(--clr-neutral-900);
        line-height: 1.1;
    }

}


/* Wrapper for the cards */
.wrapper {
    max-width: 1100px;
    margin-inline: auto;
}


/* wrapper styles for narrow */
.wrapper--narrow {
    max-width: 550px;
}

/* header styles */

header {
    text-align: center;
    margin-block: 6rem;
    /* ?Helps visualize for layouts */
    /* border: 2px solid red; */
}

/* layout styles */
.layout-grid {
    display: flex;

}

/* ? Columns are different height what do you do fix it? */
/* grab all the cols and do a flex one on them. */

/* ?direct child selection. */
.layout-grid>* {
    flex: 1;
}


/* col class */
.col {
    border: 4px solid dodgerblue;

}

